--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="player">Spieler</string>
     <string name="start_game">Spiel starten</string>
 
+
+
+    <!--- contextual action bar -->
+
+    <string name="cab_checked_string">ausgewählt</string>
+    <string name="cab_change">Ändern</string>
+    <string name="cab_delete">Löschen</string>
 </resources>
