--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,16 @@
 
 
     <string name="settings">Einstellungen</string>
-    <string name="player">Spieler</string>
+    <string name="players">Spieler</string>
     <string name="start_game">Spiel starten</string>
 
 
-    <!--- contextual action bar -->
+    <!--- contextual action bar players -->
 
     <string name="cab_checked_string">ausgewählt</string>
     <string name="cab_change">Ändern</string>
     <string name="cab_delete">Löschen</string>
+    <string name="games">Spiele</string>
+    <string name="game_name">Name des Spiels</string>
+    <string name="player_name">Name des Spielers</string>
 </resources>
