--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="settings">Einstellungen</string>
     <string name="players">Spieler</string>
+    <string name="select_players">Spieler auswählen...</string>
     <string name="start_game">Spiel starten</string>
 
 
